mangosdk/src/test/resources/invalid/EnumTestClass.java
import java.util.RandomAccess;

import org.mangosdk.spi.ProviderFor;

@ProviderFor(RandomAccess.class)
public enum EnumTestClass implements RandomAccess {
	
}
